shalinee | test | z-index issue solved

--- a/apps/web-giddh/src/app/shared/primary-sidebar/company-branch/company-branch.component.scss
+++ b/apps/web-giddh/src/app/shared/primary-sidebar/company-branch/company-branch.component.scss
@@ -324,7 +324,7 @@
                                     background-color: $dark-alice-blue;
                                     position: sticky;
                                     top: 0;
-                                    z-index: 990;
+                                    z-index: 991;
                                 }
                                 .icon-down-new{
                                     transform: rotate(180deg)
